[package]
name = "autd3-firmware-test"
version = "12.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
autd3 = "34.0.0-rc.1"
autd3-link-twincat = "34.0.0-rc.1"
autd3-link-simulator = { version = "34.0.0-rc.1", features = ["blocking"] }
colored = "3.0.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.40"
