[package]
name = "autd3-firmware-test"
version = "12.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
autd3 = { version = "35.0.0", features = ["link-audit"] }
autd3-link-twincat = "35.0.0"
autd3-link-simulator = "35.0.0"
autd3-link-soem = "35.0.0"
colored = "3.0.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.40"
